Fix PAT secret annotation
Signed-off-by: ivinokur <ivinokur@redhat.com>

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -73,7 +73,7 @@ metadata:
     app.kubernetes.io/part-of: che.eclipse.org
   annotations:
     che.eclipse.org/che-userid: __<{prod-id-short}_user_id>__# <1>
-    che.eclipse.org/scm-personal-access-token-name: _<git_provider_name>_# <2>
+    che.eclipse.org/scm-provider-name: _<git_provider_name>_# <2>
     che.eclipse.org/scm-url: __<git_provider_endpoint>__# <3>
     che.eclipse.org/scm-organization: __<git_provider_organization>__# <4>
 stringData:
@@ -82,7 +82,7 @@ type: Opaque
 ----
 +
 <1> Your {prod-short} user ID.
-<2> The Git provider name: `github` or `gitlab` or `bitbucket-server` or `azure-devops`.
+<2> The Git provider name: `github` or `gitlab` or `bitbucket` or `bitbucket-server` or `azure-devops`.
 <3> The Git provider URL.
 <4> This line is only applicable to `azure-devops`: your Git provider user organization.
 
