fix validation errors and warnings
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -3,7 +3,7 @@
 :keywords: overview, running-che-in-the-cloud, installing-che-in-the-cloud
 :navtitle: Installing {prod-short} in the cloud
 
-[id="installing-{prod-id-short}-locally"]
+[id="installing-{prod-id-short}-in-the-cloud"]
 = Installing {prod-short} in the cloud
 
 Deploy and run {prod} in the cloud.
@@ -16,7 +16,7 @@ Deploy and run {prod} in the cloud.
 
 == Deploying {prod-short} in the cloud
 
-Follow the instructions below to start the {prod-short} Server in the cloud using the `{prod-cli}` tool.
+Follow the instructions below to start the {prod-short} Server in the cloud by using the `{prod-cli}` tool.
 
 * xref:installing-che-on-openshift-using-cli.adoc[]
 * xref:installing-che-on-openshift-using-the-web-console.adoc[]
