--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
@@ -121,6 +121,10 @@ $ cd {image-puller-repository-name}/deploy/openshift
 |The name of the ServiceAccount created and used by the deployment
 |`kubernetes-image-puller`
 
+|`KIP_IMAGE`
+|The image puller image to copy the sleep binary from
+|`{image-puller-image-name}:latest`
+
 |===
 
 
