fix: correct community meetings info

--- a/modules/overview/pages/introduction-to-eclipse-che.adoc
+++ b/modules/overview/pages/introduction-to-eclipse-che.adoc
@@ -53,9 +53,9 @@ Community blog::
 
 Learn about the latest of {prod} and submit your blog posts to the link:https://che.eclipseprojects.io[{prod} blog].
 
-Weekly meetings::
+Community meetings::
 
-Join us in the link:https://github.com/eclipse/che/wiki/{prod-short}-Dev-Meetings[{prod-short} community meeting] every Monday.
+Join us in the link:https://github.com/eclipse/che/wiki/{prod-id}-community-meetings[{prod-short} community meeting], available on-demand.
 
 Roadmap::
 
