--- a/modules/administration-guide/examples/snip_che-configuring-cluster-roles-for-users.adoc
+++ b/modules/administration-guide/examples/snip_che-configuring-cluster-roles-for-users.adoc
@@ -56,7 +56,7 @@ $ kubectl apply -f - <<EOF
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ${USER_ROLES}
+  name: ${USER_ROLES}-operator
   labels:
     app.kubernetes.io/part-of: che.eclipse.org
 subjects:
