--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -11,7 +11,7 @@ You can provision workspaces {orch-namespace}s in advance, rather than relying o
 
 .Procedure
 
-* Disable automatic namespace provisioning on the `CheCluster` level:
+. Disable automatic namespace provisioning on the `CheCluster` level:
 +
 [source,yaml,subs="+quotes,+attributes"]
 ----
