--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -20,7 +20,7 @@ devEnvironments:
     autoProvision: false
 ----
 
-* Create the __<{orch-namespace}_name>__ {orch-namespace} for __<username>__ user with the following labels and annotations:
+. Create the __<{orch-namespace}_name>__ {orch-namespace} for __<username>__ user with the following labels and annotations:
 +
 [source,yaml,subs="+quotes,+attributes"]
 ----
