--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -11,7 +11,16 @@ You can provision workspaces {orch-namespace}s in advance, rather than relying o
 
 .Procedure
 
-* Create the __<{orch-namespace}_name>__ {orch-namespace} for __<username>__ user with the following labels and annotations:
+. Disable automatic namespace provisioning on the `CheCluster` level:
++
+[source,yaml,subs="+quotes,+attributes"]
+----
+devEnvironments:
+  defaultNamespace:
+    autoProvision: false
+----
+
+. Create the __<{orch-namespace}_name>__ {orch-namespace} for __<username>__ user with the following labels and annotations:
 +
 [source,yaml,subs="+quotes,+attributes"]
 ----
