chore: Add article about limiting the number of running workspaces across the cluster and concealing editors
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -103,7 +103,7 @@ stringData:
 ----
 NOTE: Run `update-ca-trust` command on workspace startup to import certificates.
 It can be achieved manually or by adding this command to a `postStart` event in a devfile.
-See the link:https://devfile.io/docs/2.2.2/adding-event-bindings#post-start-object[Adding event bindings in a devfile].
+See the link:https://devfile.io/docs/{devfile-api-version}/adding-event-bindings#post-start-object[Adding event bindings in a devfile].
 ====
 +
 .Mounting environment variables to a user workspace:
