--- a/modules/administration-guide/pages/configuring-workspaces-globally.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-globally.adoc
@@ -13,6 +13,8 @@ This section describes how an administrator can configure workspaces globally.
 
 * xref:enabling-users-to-run-multiple-workspaces-simultaneously.adoc[]
 
+* xref:limiting-the-number-of-workspaces-that-all-users-can-run-simultaneously.adoc[]
+
 * xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[]
 
 * xref:configuring-workspaces-nodeselector.adoc[]
