--- a/modules/administration-guide/pages/concealing-editors-definitions.adoc
+++ b/modules/administration-guide/pages/concealing-editors-definitions.adoc
@@ -2,7 +2,7 @@
 :description: Concealing editors definitions
 :keywords: administration guide, concealing, dashboard, editors
 :navtitle: Concealing editors definitions
-:page-aliases: installation-guide:concealing-editors-definitions.adoc
+//:page-aliases: installation-guide:concealing-editors-definitions.adoc
 
 [id="concealing-editors-definitions"]
 = Concealing editors definitions
