--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -10,6 +10,7 @@
 **** xref:gateway.adoc[]
 **** xref:dashboard.adoc[]
 **** xref:che-server.adoc[]
+**** xref:che-devfile-registry.adoc[]
 **** xref:plugin-registry.adoc[]
 *** xref:user-workspaces.adoc[]
 ** xref:calculating-che-resource-requirements.adoc[]
