--- a/modules/administration-guide/pages/configuring-dashboard.adoc
+++ b/modules/administration-guide/pages/configuring-dashboard.adoc
@@ -11,6 +11,8 @@
 
 * xref:configuring-editors-definitions.adoc[]
 
+* xref:configuring-default-editor-definition.adoc[]
+
 * xref:concealing-editors-definitions.adoc[]
 
 * xref:customizing-openshift-che-consolelink-icon.adoc[]
