--- a/modules/administration-guide/pages/che-devfile-registry.adoc
+++ b/modules/administration-guide/pages/che-devfile-registry.adoc
@@ -13,4 +13,8 @@ You can use these samples to create ready-to-use workspaces.
 For {prod}, use the devfile registry available link:https://registry.devfile.io/viewer[here].
 
 .Additional resources
-* link:https://devfile.io/docs/2.3.0/what-is-a-devfile[What is a devfile]
+
+* link:https://devfile.io/docs/2.2.2/what-is-a-devfile[What is a devfile]
+* link:https://devfile.io/docs/2.2.0/benefits-of-devfile[Benefits of devfile]
+* link:https://devfile.io/docs/2.2.2/overview[Devfile customization overview]
+* link:https://devfile.io/[Devfile.io]
