--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -21,7 +21,7 @@ You do not need a devfile to start a workspace. If you do not include a devfile 
 
 .Devfile Registry
 
-link:https://registry.devfile.io/viewer[{Devfile Registry] contains ready-to-use community-supported devfiles for different languages and technologies. Devfiles included in the registry should be treated as samples rather than templates.
+link:https://registry.devfile.io/viewer[Devfile Registry] contains ready-to-use community-supported devfiles for different languages and technologies. Devfiles included in the registry should be treated as samples rather than templates.
 
 
 .Additional resources
