fix: removed devfile registry (#2787)
* removed devfile registry

* add devfile.io

* update

* remove devfile registry from diagrams

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -9,8 +9,8 @@
 **** xref:devworkspace-operator.adoc[]
 **** xref:gateway.adoc[]
 **** xref:dashboard.adoc[]
-**** xref:devfile-registries.adoc[]
 **** xref:che-server.adoc[]
+**** xref:che-devfile-registry.adoc[]
 **** xref:plugin-registry.adoc[]
 *** xref:user-workspaces.adoc[]
 ** xref:calculating-che-resource-requirements.adoc[]
