--- a/modules/administration-guide/pages/configuring-default-editor-definition.adoc
+++ b/modules/administration-guide/pages/configuring-default-editor-definition.adoc
@@ -12,13 +12,16 @@ Learn how to configure {prod-short} default editor definition.
 
 * An active `{orch-cli}` session with administrative permissions to the {orch-name} cluster. See {orch-cli-link}.
 
+* `jq`. See link:https://stedolan.github.io/jq/download/[Downloading `jq`].
+
 .Procedure
 
-. Find out available editors:
+. Find out available editors IDs:
 +
 [source,subs="+quotes,+attributes"]
 ----
-{orch-cli} exec deploy/{prod-id-short}-dashboard -n {prod-namespace}  -- curl http://localhost:8080/dashboard/api/editors
+{orch-cli} exec deploy/{prod-id-short}-dashboard -n {prod-namespace}  \
+    -- curl -s http://localhost:8080/dashboard/api/editors | jq -r '.[] | "\(.metadata.attributes.publisher)/\(.metadata.name)/\(.metadata.attributes.version)"'
 ----
 
 . Configure the `defaultEditor`:
@@ -30,7 +33,7 @@ Learn how to configure {prod-short} default editor definition.
     --type='merge' \
     -p '{"spec":{"devEnvironments":{"defaultEditor": "__<default_editor>__"}}}'# <1>
 ----
-<1> The default editor to workspace create with. It could be a plugin ID or a URI. The plugin ID must have `publisher/name/version` format. The URI must start from `http://` or `https://`.
+<1> The default editor for creating a workspace can be specified using either a plugin ID or a URI. The plugin ID should follow the format: `publisher/name/version`. See available editors IDs in the first step.
 
 .Additional resources
 
