--- a/modules/administration-guide/pages/concealing-editors-definitions.adoc
+++ b/modules/administration-guide/pages/concealing-editors-definitions.adoc
@@ -6,7 +6,7 @@
 [id="concealing-editors-definitions"]
 = Concealing editors definitions
 
-Learn how to conceal {prod-short} editor definitions. It can be useful when you want to hide some of the editors from the Dashboard UI, e.g. IntelliJ and have only Code OSS.
+Learn how to conceal {prod-short} editor definitions. This is useful when you want to hide selected editors from the Dashboard UI, e.g. hide the IntelliJ IDEA Ultimate and have only Visual Studio Code - Open Source visible.
 
 .Prerequisites
 
