--- a/modules/administration-guide/pages/concealing-editors-definitions.adoc
+++ b/modules/administration-guide/pages/concealing-editors-definitions.adoc
@@ -29,7 +29,7 @@ OPERATOR_NAMESPACE=$({orch-cli} get pods -l app.kubernetes.io/component={prod-op
 ----
 {orch-cli} exec -n $OPERATOR_NAMESPACE deploy/{prod-operator} -- ls /tmp/editors-definitions
 ----
-The output should look similar to the following:
+The output should look similar to the following example:
 +
 [source]
 ----
