--- a/modules/administration-guide/pages/concealing-editors-definitions.adoc
+++ b/modules/administration-guide/pages/concealing-editors-definitions.adoc
@@ -63,7 +63,7 @@ CHE_EDITOR_CONCEAL_CONFIGMAP_NAME=che-conceal-$CHE_EDITOR_CONCEAL_FILE_NAME
     --from-literal=$CHE_EDITOR_CONCEAL_FILE_NAME=""
 ----
 
-. Find out the Operator subscription namespace if it exists:
+. Find out the Operator subscription namespace (if it exists):
 +
 [source,subs="+attributes"]
 ----
