--- a/modules/administration-guide/pages/concealing-editors-definitions.adoc
+++ b/modules/administration-guide/pages/concealing-editors-definitions.adoc
@@ -74,7 +74,7 @@ SUBSCRIPTION_NAMESPACE=$({orch-cli} get subscription \
 )
 ----
 
-. Patch the {kubernetes} resource to mount the ConfigMap with the empty editor definition. The resource to patch depends on the existence of the Operator subscription. If the subscription exists, then the subscription should be patched, otherwise the Operator deployment:
+. Patch the {kubernetes} resource to mount the ConfigMap with the empty editor definition. The resource to patch depends on the existence of the Operator subscription. If the subscription exists, then the subscription should be patched. If not, patch the Operator deployment:
 +
 [source,subs="+attributes"]
 ----
