--- a/modules/administration-guide/pages/configuring-default-editor-definition.adoc
+++ b/modules/administration-guide/pages/configuring-default-editor-definition.adoc
@@ -16,7 +16,7 @@ Learn how to configure {prod-short} default editor definition.
 
 .Procedure
 
-. Find out available editors IDs:
+. Find out the IDs of the available editors:
 +
 [source,subs="+quotes,+attributes"]
 ----
