chore: Add article about limiting the number of running workspaces ac… (#2788)
* chore: Add article about limiting the number of running workspaces across the cluster and concealing editors

Signed-off-by: Anatolii Bazko <abazko@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -42,6 +42,7 @@
 *** xref:configuring-machine-autoscaling.adoc[]
 ** xref:configuring-workspaces-globally.adoc[]
 *** xref:limiting-the-number-of-workspaces-that-a-user-can-keep.adoc[]
+*** xref:limiting-the-number-of-workspaces-that-all-users-can-run-simultaneously.adoc[]
 *** xref:enabling-users-to-run-multiple-workspaces-simultaneously.adoc[]
 *** xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[]
 *** xref:configuring-workspaces-nodeselector.adoc[]
@@ -74,6 +75,8 @@
 ** xref:configuring-dashboard.adoc[]
 *** xref:configuring-getting-started-samples.adoc[]
 *** xref:configuring-editors-definitions.adoc[]
+*** xref:configuring-default-editor-definition.adoc[]
+*** xref:concealing-editors-definitions.adoc[]
 *** xref:customizing-openshift-che-consolelink-icon.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
 *** xref:configuring-oauth-for-git-providers.adoc[]
