--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -26,8 +26,8 @@ link:https://registry.devfile.io/viewer[Devfile Registry] contains ready-to-use 
 
 .Additional resources
 
-* link:https://devfile.io/docs/2.2.2/what-is-a-devfile[What is a devfile]
-* link:https://devfile.io/docs/2.2.0/benefits-of-devfile[Benefits of devfile]
-* link:https://devfile.io/docs/2.2.2/overview[Devfile customization overview]
+* link:https://devfile.io/docs/{devfile-api-version}/what-is-a-devfile[What is a devfile]
+* link:https://devfile.io/docs/{devfile-api-version}/benefits-of-devfile[Benefits of devfile]
+* link:https://devfile.io/docs/{devfile-api-version}/overview[Devfile customization overview]
 * link:https://devfile.io/[Devfile.io]
 * link:https://che.eclipseprojects.io/2024/02/05/@mario.loriedo-cde-customization.html[Customizing Cloud Development Environments]
