chore: Configuring allowed URLs for Cloud Development Environment
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/configuring-workspaces-globally.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-globally.adoc
@@ -18,3 +18,5 @@ This section describes how an administrator can configure workspaces globally.
 * xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[]
 
 * xref:configuring-workspaces-nodeselector.adoc[]
+
+* xref:configuring-allowed-urls-for-cloud-development-environments.adoc[]
