--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -48,6 +48,7 @@
 *** xref:configuring-workspaces-nodeselector.adoc[]
 *** xref:configuring-the-open-vsx-registry-url.adoc[]
 *** xref:configuring-a-user-namespace.adoc[]
+*** xref:configuring-allowed-urls-for-cloud-development-environments.adoc[]
 ** xref:caching-images-for-faster-workspace-start.adoc[]
 *** xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
 *** xref:installing-image-puller-on-openshift-using-cli.adoc[]
