feat: update autoscaler documentation (#2789)
* feat: update autoscaler documentation

Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

* fixup! feat: update autoscaler documentation

---------

Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/modules/administration-guide/pages/configuring-machine-autoscaling.adoc
+++ b/modules/administration-guide/pages/configuring-machine-autoscaling.adoc
@@ -31,7 +31,7 @@ spec:
       - FailedScheduling
 ----
 <1> Set to at least 600 seconds to allow time for a new node to be provisioned during workspace startup.
-<2> Ignore the `FailedScheduling` event to allow workspace startup to continue when a new node is provisioned. 
+<2> Ignore the `FailedScheduling` event to allow workspace startup to continue when a new node is provisioned. This setting is enabled by default.
 
 == When the autoscaler removes a node
 To prevent workspace pods from being evicted when the autoscaler needs to remove a node, add the `"cluster-autoscaler.kubernetes.io/safe-to-evict": "false"` annotation to every workspace pod.
