fixup! chore: add descriptions of branches and workflows for this project

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -52,15 +52,16 @@ To understand the nature of topics, see the link:https://redhat-documentation.gi
 Che Docs uses GitHub actions workflows for performing CI / release builds, as well as Pull request check jobs.
 
 CI jobs:
-- build-and-validate-on-push.yaml - assemble the project using the current `che-docs:next` image. Triggered on commit to the main branch
-- container-build - build `quay.io/eclipse/che-docs:next` image.
-- call-publication-builder - Triggered on commit to the main or release branch. Invoke publication-builder workflow to publish documentation in `publication` branch. 
+* link:https://github.com/eclipse-che/che-docs/actions/workflows/build-and-validate-on-push.yaml[Build and validate] - assemble the project using the current `che-docs:next` image. Triggered on commit to the main branch
+* link:https://github.com/eclipse-che/che-docs/actions/workflows/release.ymlcontainer-build - build `quay.io/eclipse/che-docs:next` image.
+* link:https://github.com/eclipse-che/che-docs/actions/workflows/release.ymlcall-publication-builder - Triggered on commit to the main or release branch. Invoke publication-builder workflow to publish documentation in `publication` branch. 
 
 Release jobs:
-- release.yml - see link:https://github.com/eclipse/che-docs/blob/main/RELEASE.adoc[Release Eclipse Che documentation].
+
+* link:https://github.com/eclipse-che/che-docs/actions/workflows/release.yml[Release Che Docs]- see link:https://github.com/eclipse/che-docs/blob/main/RELEASE.adoc[Release Eclipse Che documentation].
 
 PR Check jobs:
-- build-and-validate-on-pr.yaml - assemble the project from the PR branch, using `cquay.io/eclipse/che-docs:next` container image.
+* link: build-and-validate-on-pr.yaml - assemble the project from the PR branch, using `cquay.io/eclipse/che-docs:next` container image.
 - container-on-pull-request - build `che-docs` image.
 - call-publication-builder.yaml
 - publish-netlify - triggered after `build-and-validate-on-pr` completion. Assembled documentation is deployed for preview using netlify platform
