chore: Minimal set of permissions to deploy che on openshift
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
@@ -49,3 +49,7 @@ $ {prod-cli} server:status
 ----
 $ {prod-cli} dashboard:open
 ----
+
+.Additional resources
+
+* xref:permissions-to-install-che-on-openshift-using-cli.adoc[]
