--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -57,3 +57,7 @@ pass:[<!-- vale RedHat.Spelling = YES -->]
 . Under *{prod} URL*, wait until the URL of the {prod-short} instance appears, and then open the URL to check the {prod-short} dashboard.
 
 . In the *Resources* tab, view the resources for the {prod-short} deployment and their status.
+
+.Additional resources
+
+* xref:permissions-to-install-che-on-openshift-using-the-web-console.adoc[]
