--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -26,6 +26,9 @@
 *** xref:installing-che-on-minikube.adoc[]
 *** xref:installing-che-on-minikube-keycloak-oidc.adoc[]
 ** xref:finding-the-fully-qualified-domain-name-fqdn.adoc[]
+** xref:permissions-to-install-che.adoc[]
+*** xref:permissions-to-install-che-on-openshift-using-cli.adoc[]
+*** xref:permissions-to-install-che-on-openshift-using-the-web-console.adoc[]
 * xref:configuring-che.adoc[]
 ** xref:understanding-the-checluster-custom-resource.adoc[]
 *** xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
